# PAOO-Tema2

src/: CMakeLists.txt  main.cpp
src/Student/: CMakeLists.txt  Student.cpp  Student.h
src/Subject/: CMakeLists.txt  Subject.cpp  Subject.h
